# riallm

./: .gitignore  BUILD_STATUS.md  Cargo.toml  LICENSE  README.md
examples/: basic_usage.rs
src/: adapters.rs  auto_model.rs  config.rs  error.rs  lib.rs  memory.rs  model.rs  model.rs_end  persistence.rs  profiler.rs  quantization.rs  utils.rs
tests/: integration_test.rs
